# DocCrate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
docs/: architecture.md  features.md  getting-started.md  index.md  markdown-reference.md  markdown.md  mermaid-architecture-freeform.md  mermaid-architecture-glyphs.md  mermaid-architecture-patterns.md  mermaid-architecture.md  mermaid-c4.md  mermaid-class.md  mermaid-custom-shapes.md  mermaid-er.md  mermaid-gantt.md  mermaid-git.md  mermaid-journey.md  mermaid-sequence.md  mermaid-shapes.md  mermaid-state.md  mermaid-test.md  mermaid-timeline.md  shortcuts.md
docs/api/: authentication.md  endpoints.md  index.md
docs/guides/: configuration.md  installation.md
docs/reference/: cli.md  theming.md
res/: doc-crate.manifest
res/shapes/: api.shape  browser.shape  cache.shape  cloud.shape  database.shape  db.shape  disk.shape  document.shape  file.shape  function.shape  gateway.shape  internet.shape  lock.shape  mobile.shape  queue.shape  server.shape  service.shape  user.shape  worker.shape
selkie/docs/: selkie_annotations_design.md
selkie/tests/: render_integration.rs
selkie/tests/render_fixtures/: annotated_visual_review.mmd
selkie/visuals/: README.md
src/: docs.rs  layout.rs  main.rs  parser.rs  render.rs  rope_buffer.rs  search.rs  theme.rs
src/mermaid/: build.rs  ir.rs  mod.rs  render.rs  sequence.rs  shape_def.rs
