[package]
name = "doc-crate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "doc-crate"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pulldown-cmark = "0.12"
windows-numerics = "0.3"

# Mermaid parser + dagre-style layout. We pull only the rlib (no png, no cli),
# parse + lay out a flowchart, apply annotation overrides, then draw the
# resulting LayoutGraph ourselves via Direct2D.
selkie-rs = { path = "selkie", default-features = false }

[dependencies.windows]
version = "0.62"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
